# mtglib

./: .gitignore  CONTRACT.md  PLAN.md  README.md  idea.md  pyproject.toml  requirements.txt  start.cmd  start.ps1
app/: generator.py  indexer.py  main.py  models.py  scorer.py  storage.py
cards/: a-killer-among-us.md  a-realm-reborn.md  a-tale-for-the-ages.md  aang-at-the-crossroads-aang-destined-savior.md  aang-swift-savior-aang-and-la-oceans-fury.md  aang-the-last-airbender.md  aangs-iceberg.md  aangs-journey.md  aatchik-emerald-radian.md  abandon-attachments.md  abandoned-air-temple.md  abandoned-campground.md  abhorrent-oculus.md  abigale-eloquent-first-year.md  abrade.md  abraded-bluffs.md  absolute-virtue.md  absolving-lammasu.md  abuelo-ancestral-echo.md  abuelos-awakening.md  abyssal-gorestalker.md  abyssal-harvester.md  abzan-devotee.md  abzan-monument.md  accumulate-wisdom.md  aclazotz-deepest-betrayal-temple-of-the-dead.md  acolyte-of-aclazotz.md  acrobatic-cheerleader.md  acrobatic-leap.md  action-news-crew.md  adagia-windswept-bastion.md  adamant-will.md  adaptive-automaton.md  adaptive-gemguard.md  adelbert-steiner.md  adept-watershaper.md  adorned-crocodile.md  adrenaline-jockey.md  adventurers-airship.md  adventurers-inn.md  (+4144 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: api.ts  app.tsx  main.tsx  styles.css  types.ts
scripts/: fetch_standard_cards.py  lint_cards.py  mtglib_contract.py
tests/: conftest.py  test_mvp_api.py
